[package]
name = "mesquitte-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["v4"]
v4 = ["mqtt-codec-kit/v4", "mqtt-codec-kit/tokio-codec"]

[dependencies]
async-tungstenite = { version = "0.28", features = ["tokio-runtime", "url"] }
futures = { version = "0.3" }
moka = { version = "0.12", features = ["future"] }
mqtt-codec-kit = { version = "1.0" }
parking_lot = "0.12"
pin-project-lite = "0.2"
s2n-quic = "1"
thiserror = "1.0"
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
    "net",
    "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
url = "*"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
