[workspace]
resolver = "2"
members = ["v4", "v5", "utils", "examples"]

[workspace.package]
license = "Apache-2.0"
readme = "README.md"
authors = ["qinxin0720 <qinxin_0720@live.com>"]
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
utils = { path = "./utils" }

async-tungstenite = { version = "0.28", features = ["tokio-runtime", "url"] }
env_logger = "0.11"
futures = { version = "0.3" }
moka = { version = "0.12", features = ["future"] }
mqtt-codec-kit = { version = "1.0", default-features = false }
parking_lot = "0.12"
pin-project-lite = "0.2"
s2n-quic = "1"
thiserror = "1.0"
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
    "net",
    "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
url = "2"
log = "0.4"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
debug = true
